--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,63 @@
 {
   "name": "Ruby on Rails & MySQL",
-  "dockerComposeFile": "docker-compose.yaml",
+  "dockerComposeFile": "compose.yaml",
   "service": "app",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "containerEnv": {
+    "DB_USER": "vscode",
+    "DB_HOST": "mysql",
+    "DB_PORT": "3306"
+  },
   "forwardPorts": [
-    3000
+    3000,
+    3306
   ],
+  "postCreateCommand": "bin/setup",
+  "features": {
+    "ghcr.io/rails/devcontainer/features/bundler-cache:1": {},
+    "ghcr.io/rails/devcontainer/features/mysql-client": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {}
+  },
   "customizations": {
     "vscode": {
       "extensions": [
         "GitHub.copilot",
         "GitHub.copilot-chat",
-        "Shopify.ruby-lsp",
         "redhat.vscode-yaml",
         "hoovercj.vscode-power-mode"
-      ]
+      ],
+      "settings": {
+        "[ruby]": {
+          "editor.defaultFormatter": "Shopify.ruby-lsp",
+          "editor.formatOnSave": true,
+          "editor.tabSize": 2,
+          "editor.insertSpaces": true,
+          "editor.semanticHighlighting.enabled": true,
+          "editor.formatOnType": true
+        },
+        "rubyLsp.rubyVersionManager": {
+          "identifier": "mise"
+        },
+        "rubyLsp.formatter": "rubocop",
+        "rubyLsp.enabledFeatures": {
+          "codeActions": true,
+          "diagnostics": true,
+          "documentHighlights": true,
+          "documentLink": true,
+          "documentSymbols": true,
+          "foldingRanges": true,
+          "formatting": true,
+          "hover": true,
+          "inlayHint": true,
+          "onTypeFormatting": true,
+          "selectionRanges": true,
+          "semanticHighlighting": true,
+          "completion": true,
+          "codeLens": true,
+          "definition": true,
+          "workspaceSymbol": true
+        }
+      }
     }
-  },
-  "features": {
-    "ghcr.io/devcontainers/features/ruby:1": {},
-    "ghcr.io/devcontainers/features/github-cli:1": {}
   }
 }
