feat: add google.geminicodeassist extension
Add the google.geminicodeassist extension to the
development container configuration. This extension
provides enhanced code assistance for Ruby on Rails
development, improving developer productivity.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,7 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        "google.geminicodeassist",
         "GitHub.copilot",
         "GitHub.copilot-chat",
         "redhat.vscode-yaml",
