--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -135,38 +135,48 @@ jobs:
           CLOUD_STORAGE_ENDPOINT: https://storage.googleapis.com
           CLOUD_STORAGE_BUCKET_NAME: qoodish.appspot.com
           GOOGLE_ACCOUNT_TYPE: service_account
+          OTELCOL_IMAGE_REPO: qoodish-common
+          OTEL_EXPORTER_OTLP_ENDPOINT: http://localhost:4317
         run: |
           gcloud beta run deploy qoodish-api \
-            --platform=managed \
-            --region=asia-northeast1 \
-            --project=$PROJECT_ID \
-            --cpu=1000m \
-            --cpu-boost \
-            --memory=512Mi \
-            --max-instances=2 \
-            --port=8080 \
-            --service-account=$CLOUD_RUN_SA_NAME \
-            --ingress=all \
             --allow-unauthenticated \
+            --cpu-boost \
             --execution-environment=gen2 \
-            --no-traffic \
-            --tag=${{ env.CLOUD_RUN_TAG }} \
-            --image=$ARTIFACT_REGISTRY/$PROJECT_ID/$SERVICE_NAME/$SERVICE_NAME:$GITHUB_SHA \
+            --ingress=all \
             --network=default \
+            --no-traffic \
+            --platform=managed \
+            --project=$PROJECT_ID \
+            --region=asia-northeast1 \
+            --service-account=$CLOUD_RUN_SA_NAME \
             --subnet=default \
+            --tag=${{ env.CLOUD_RUN_TAG }} \
             --vpc-egress=private-ranges-only \
-            --set-env-vars "RAILS_ENV=production" \
-            --set-env-vars "GOOGLE_CLIENT_EMAIL=$CLOUD_RUN_SA_NAME" \
-            --set-env-vars "GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID" \
-            --set-env-vars "DB_HOST=$DB_HOST" \
-            --set-env-vars "DB_PORT=3306" \
-            --set-env-vars "ALLOWED_ENDPOINTS=$ALLOWED_ENDPOINTS" \
-            --set-env-vars "CLOUD_STORAGE_ENDPOINT=$CLOUD_STORAGE_ENDPOINT" \
-            --set-env-vars "CLOUD_STORAGE_BUCKET_NAME=$CLOUD_STORAGE_BUCKET_NAME" \
-            --set-env-vars "GOOGLE_PROJECT_ID=$PROJECT_ID" \
-            --set-env-vars "GOOGLE_ACCOUNT_TYPE=$GOOGLE_ACCOUNT_TYPE" \
-            --set-secrets "GOOGLE_API_KEY_SERVER=QOODISH_API_GOOGLE_API_KEY:latest" \
-            --set-secrets "RAILS_MASTER_KEY=QOODISH_API_RAILS_MASTER_KEY:latest" \
-            --set-secrets "GOOGLE_PRIVATE_KEY=QOODISH_API_GOOGLE_PRIVATE_KEY:latest" \
-            --set-secrets "DB_PASSWORD=QOODISH_API_DB_PASSWORD:latest" \
-            --set-secrets "DB_USER=QOODISH_API_DB_USER:latest"
+            \
+            --container qoodish-api \
+              --image=$ARTIFACT_REGISTRY/$PROJECT_ID/$SERVICE_NAME/$SERVICE_NAME:$GITHUB_SHA \
+              --cpu=1000m \
+              --depends-on=otelcol \
+              --max-instances=2 \
+              --memory=512Mi \
+              --port=8080 \
+              --set-env-vars "RAILS_ENV=production" \
+              --set-env-vars "OTEL_EXPORTER_OTLP_ENDPOINT=$OTEL_EXPORTER_OTLP_ENDPOINT" \
+              --set-env-vars "GOOGLE_CLIENT_EMAIL=$CLOUD_RUN_SA_NAME" \
+              --set-env-vars "GOOGLE_CLIENT_ID=$GOOGLE_CLIENT_ID" \
+              --set-env-vars "DB_HOST=$DB_HOST" \
+              --set-env-vars "DB_PORT=3306" \
+              --set-env-vars "ALLOWED_ENDPOINTS=$ALLOWED_ENDPOINTS" \
+              --set-env-vars "CLOUD_STORAGE_ENDPOINT=$CLOUD_STORAGE_ENDPOINT" \
+              --set-env-vars "CLOUD_STORAGE_BUCKET_NAME=$CLOUD_STORAGE_BUCKET_NAME" \
+              --set-env-vars "GOOGLE_PROJECT_ID=$PROJECT_ID" \
+              --set-env-vars "GOOGLE_ACCOUNT_TYPE=$GOOGLE_ACCOUNT_TYPE" \
+              --set-secrets "GOOGLE_API_KEY_SERVER=QOODISH_API_GOOGLE_API_KEY:latest" \
+              --set-secrets "RAILS_MASTER_KEY=QOODISH_API_RAILS_MASTER_KEY:latest" \
+              --set-secrets "GOOGLE_PRIVATE_KEY=QOODISH_API_GOOGLE_PRIVATE_KEY:latest" \
+              --set-secrets "DB_PASSWORD=QOODISH_API_DB_PASSWORD:latest" \
+              --set-secrets "DB_USER=QOODISH_API_DB_USER:latest" \
+            \
+            --container otelcol \
+              --image=$ARTIFACT_REGISTRY/$PROJECT_ID/$OTELCOL_IMAGE_REPO/otelcol:latest \
+              --startup-probe="httpGet.port=13133,httpGet.path=/,initialDelaySeconds=5,timeoutSeconds=2,periodSeconds=10,failureThreshold=3"
