--- a/otelcol-google/collector-config.yaml
+++ b/otelcol-google/collector-config.yaml
@@ -1,49 +1,150 @@
 receivers:
+  # Open two OTLP servers:
+  # - On port 4317, open an OTLP GRPC server
+  # - On port 4318, open an OTLP HTTP server
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector/tree/main/receiver/otlpreceiver
   otlp:
     protocols:
       grpc:
+        endpoint: localhost:4317
       http:
+        cors:
+          # This effectively allows any origin
+          # to make requests to the HTTP server.
+          allowed_origins:
+            - http://*
+            - https://*
+        endpoint: localhost:4318
 
 processors:
+  # The batch processor is in place to regulate both the number of requests
+  # being made and the size of those requests.
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector/tree/main/processor/batchprocessor
   batch:
-    # batch metrics before sending to reduce API usage
     send_batch_max_size: 200
     send_batch_size: 200
     timeout: 5s
 
+  # The memorylimiter will check the memory usage of the collector process.
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector/tree/main/processor/memorylimiterprocessor
   memory_limiter:
-    # drop metrics if memory usage gets too high
     check_interval: 1s
     limit_percentage: 65
     spike_limit_percentage: 20
 
-  # automatically detect Cloud Run resource metadata
+  # The resourcedetection processor is configured to detect GCP resources.
+  # Resource attributes that represent the GCP resource the collector is
+  # running on will be attached to all telemetry that goes through this
+  # processor.
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/resourcedetectionprocessor
+  # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/processor/resourcedetectionprocessor#gcp-metadata
   resourcedetection:
-    detectors: [env, gcp]
-    timeout: 2s
-    override: false
+    detectors: [gcp]
+    timeout: 10s
 
-  resource:
-    attributes:
-      # add instance_id as a resource attribute
-      - key: service.instance.id
-        from_attribute: faas.id
-        action: upsert
-        # parse service name from K_SERVICE Cloud Run variable
-      - key: service.name
-        value: ${env:K_SERVICE}
-        action: insert
+  transform/collision:
+    metric_statements:
+      - context: datapoint
+        statements:
+          - set(attributes["exported_location"], attributes["location"])
+          - delete_key(attributes, "location")
+          - set(attributes["exported_cluster"], attributes["cluster"])
+          - delete_key(attributes, "cluster")
+          - set(attributes["exported_namespace"], attributes["namespace"])
+          - delete_key(attributes, "namespace")
+          - set(attributes["exported_job"], attributes["job"])
+          - delete_key(attributes, "job")
+          - set(attributes["exported_instance"], attributes["instance"])
+          - delete_key(attributes, "instance")
+          - set(attributes["exported_project_id"], attributes["project_id"])
+          - delete_key(attributes, "project_id")
 
 exporters:
-  googlemanagedprometheus: # Note: this is intentionally left blank
+  # The googlecloud exporter will export telemetry to different
+  # Google Cloud services:
+  # Logs -> Cloud Logging
+  # Metrics -> Cloud Monitoring
+  # Traces -> Cloud Trace
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/exporter/googlecloudexporter
+  googlecloud:
+    log:
+      default_log_name: opentelemetry-collector
+
+  # The googlemanagedprometheus exporter will send metrics to
+  # Google Managed Service for Prometheus.
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/exporter/googlemanagedprometheusexporter
+  googlemanagedprometheus:
 
 extensions:
+  # Opens an endpoint on 13133 that can be used to check the
+  # status of the collector. Since this does not configure the
+  # `path` config value, the endpoint will default to `/`.
+  #
+  # When running on Cloud Run, this extension is required and not optional.
+  # In other environments it is recommended but may not be required for operation
+  # (i.e. in Container-Optimized OS or other GCE environments).
+  #
+  # Docs:
+  # https://github.com/open-telemetry/opentelemetry-collector-contrib/tree/main/extension/healthcheckextension
   health_check:
     endpoint: 0.0.0.0:13133
+
 service:
-  extensions: [health_check]
+  extensions:
+    - health_check
   pipelines:
+    logs:
+      receivers:
+        - otlp
+      processors:
+        - resourcedetection
+        - memory_limiter
+        - batch
+      exporters:
+        - googlecloud
+    metrics/otlp:
+      receivers:
+        - otlp
+      processors:
+        - resourcedetection
+        - transform/collision
+        - memory_limiter
+        - batch
+      exporters:
+        - googlemanagedprometheus
+    traces:
+      receivers:
+        - otlp
+      processors:
+        - resourcedetection
+        - memory_limiter
+        - batch
+      exporters:
+        - googlecloud
+  # Internal telemetry for the collector supports both push and pull-based telemetry data transmission.
+  # Leveraging the pre-configured OTLP receiver eliminates the need for an additional port.
+  #
+  # Docs:
+  # https://opentelemetry.io/docs/collector/internal-telemetry/
+  telemetry:
+    logs:
+      encoding: json
     metrics:
-      receivers: [otlp]
-      processors: [batch, memory_limiter, resourcedetection, resource]
-      exporters: [googlemanagedprometheus]
+      readers:
+        - periodic:
+            exporter:
+              otlp:
+                protocol: grpc
+                endpoint: localhost:4317
