feat: add kubectl-helm-minikube feature
Include the kubectl-helm-minikube feature in the
devcontainer configuration to dynamically generate Cloud Run manifests
using Kustomize.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
   "features": {
     "ghcr.io/rails/devcontainer/features/bundler-cache:1": {},
     "ghcr.io/rails/devcontainer/features/mysql-client": {},
-    "ghcr.io/devcontainers/features/github-cli:1": {}
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {}
   },
   "customizations": {
     "vscode": {
