tmp: disable updating traffic

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -183,11 +183,11 @@ jobs:
           kustomize build . | gcloud beta run services replace - \
             --project=$PROJECT_ID \
             --region=$REGION
-      - name: Update traffic tag to the new revision
-        env:
-          CLOUDSDK_CORE_DISABLE_PROMPTS: 1
-        run: |
-          gcloud beta run services update-traffic ${{ env.SERVICE_NAME }} \
-            --update-tags=${{ steps.normalize.outputs.tag }}=LATEST \
-            --project=$PROJECT_ID \
-            --region=$REGION
+      # - name: Update traffic tag to the new revision
+      #   env:
+      #     CLOUDSDK_CORE_DISABLE_PROMPTS: 1
+      #   run: |
+      #     gcloud beta run services update-traffic ${{ env.SERVICE_NAME }} \
+      #       --update-tags=${{ steps.normalize.outputs.tag }}=LATEST \
+      #       --project=$PROJECT_ID \
+      #       --region=$REGION
